Added new portfolios

--- a/index.html
+++ b/index.html
@@ -202,25 +202,19 @@
           <a data-toggle="modal" data-target="#gridSystemModal1">
             <img src="img/portfolio1.png">
           </a>
-          <p class="portfolio__title">ポートフォリオサイト1</p>
+          <p class="portfolio__title">ポートフォリオサイト</p>
         </div>
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal2">
-            <img src="img/portfolio1.png">
+            <img src="img/portfolio2.png">
           </a>
-          <p class="portfolio__title">ポートフォリオサイト2</p>
+          <p class="portfolio__title">オンライン本棚サービス</p>
         </div>
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal3">
-            <img src="img/portfolio1.png">
+            <img src="img/portfolio3.png">
           </a>
-          <p class="portfolio__title">ポートフォリオサイト3</p>
-        </div>
-        <div class="portfolio__image">
-          <a data-toggle="modal" data-target="#gridSystemModal4">
-            <img src="img/portfolio1.png">
-          </a>
-          <p class="portfolio__title">ポートフォリオサイト4</p>
+          <p class="portfolio__title">写真検索アプリ</p>
         </div>
       </div>
     </section>
@@ -249,7 +243,7 @@
     <!-- ポートフォリオ(モーダル) -->
     <portfolio-modal
       modal-id="gridSystemModal1" 
-      modal-title="ポートフォリオサイト1"
+      modal-title="ポートフォリオサイト"
       portfolio-img="img/portfolio1.png"
       portfolio-description="自分の自己紹介を兼ねた、ポートフォリオサイトです。(TechAcademyフロントエンドコースのオリジナルサイト)"
       portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Vue.js/ Bootstrap4"
@@ -259,32 +253,22 @@
     </portfolio-modal>
     <portfolio-modal
       modal-id="gridSystemModal2" 
-      modal-title="ポートフォリオサイト2"
-      portfolio-img="img/portfolio1.png"
-      portfolio-description="自分の自己紹介を兼ねた、ポートフォリオサイトです。(TechAcademyフロントエンドコースのオリジナルサイト)"
-      portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Vue.js/ Bootstrap4"
-      portfolio-url="#"
-      portfolio-github="https://github.com/rey0811/introduction"
+      modal-title="オンライン本棚サービス"
+      portfolio-img="img/portfolio2.png"
+      portfolio-description="TechAcademyの課題をベースに、新規登録機能や星評価機能を追加しました。"
+      portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Bootstrap4/ Firebase /外部ライブラリ"
+      portfolio-url="https://booklog-app.web.app/"
+      portfolio-github="https://github.com/rey0811/booklog-app"
     >
     </portfolio-modal>
     <portfolio-modal
       modal-id="gridSystemModal3" 
       modal-title="ポートフォリオサイト3"
-      portfolio-img="img/portfolio1.png"
-      portfolio-description="自分の自己紹介を兼ねた、ポートフォリオサイトです。(TechAcademyフロントエンドコースのオリジナルサイト)"
-      portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Vue.js/ Bootstrap4"
-      portfolio-url="#"
-      portfolio-github="https://github.com/rey0811/introduction"
-    >
-    </portfolio-modal>
-    <portfolio-modal
-      modal-id="gridSystemModal4" 
-      modal-title="ポートフォリオサイト4"
-      portfolio-img="img/portfolio1.png"
-      portfolio-description="自分の自己紹介を兼ねた、ポートフォリオサイトです。(TechAcademyフロントエンドコースのオリジナルサイト)"
-      portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Vue.js/ Bootstrap4"
-      portfolio-url="#"
-      portfolio-github="https://github.com/rey0811/introduction"
+      portfolio-img="img/portfolio3.png"
+      portfolio-description="Flickr APIを活用した、写真検索アプリを開発しました。"
+      portfolio-tech="HTML5/ CSS3/ JavaScript/ jQuery/ Vue.js/ Bootstrap4/ Flickr API"
+      portfolio-url="https://photo-search-app.web.app/"
+      portfolio-github="https://github.com/rey0811/photo-search-app"
     >
     </portfolio-modal>
     
