Modified how to read script

--- a/public/index.html
+++ b/public/index.html
@@ -302,21 +302,21 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
   <!-- Popper.js, 次に Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" async></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" async></script>
 
   <!-- その他のライブラリのJavaScript -->
-  <script src="js/vendor/jquery.waypoints.min.js"></script>
+  <script src="js/vendor/jquery.waypoints.min.js" async></script>
   <script src="js/vendor/mobile-detect.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" async></script>
 
   <!--Vue用のライブラリ-->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js" async></script>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" async></script>
 
   <!-- Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
+  <script async src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
 
 </body>
 
