--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       <video autoplay muted loop class="top__video">
         <source src="video/top-video.mp4" type="video/mp4">
       </video>
-      <img class="top__img" src="video/top-video-still.jpg">
+      <img class="top__img" src="video/top-video-still.jpg" loading="eager">
 
       <!-- トップ -->
       <div class="top__text-box animate__animated animate__bounceInDown">
@@ -98,7 +98,7 @@
         <div class="row">
           <!-- 顔写真 -->
           <div class="mb-3 col-lg-6 text-center animated">
-            <img class="img-fluid rounded" src="img/profile.jpg">
+            <img class="img-fluid rounded" src="img/profile.jpg" loading="lazy">
           </div>
 
           <!-- 紹介文 -->
@@ -200,25 +200,25 @@
       <div class="portfolios__image slider animated">
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal1">
-            <img src="img/portfolio1.png">
+            <img src="img/portfolio1.png" loading="lazy">
           </a>
           <p class="portfolio__title">ポートフォリオサイト</p>
         </div>
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal2">
-            <img src="img/portfolio2.png">
+            <img src="img/portfolio2.png" loading="lazy">
           </a>
           <p class="portfolio__title">オンライン本棚サービス</p>
         </div>
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal3">
-            <img src="img/portfolio3.png">
+            <img src="img/portfolio3.png" loading="lazy">
           </a>
           <p class="portfolio__title">写真検索アプリ</p>
         </div>
         <div class="portfolio__image">
           <a data-toggle="modal" data-target="#gridSystemModal4">
-            <img src="img/portfolio4.png">
+            <img src="img/portfolio4.png" loading="lazy">
           </a>
           <p class="portfolio__title">リアルタイムチャットアプリ</p>
         </div>
